<resources>
    <string name="app_name">WiFindMe</string>

    <string name="action_settings">Settings</string>
    <string name="toolbarTitle">Groups</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="groups">Groups</string>
    <string name="myGroup">Your Group</string>
    <string name="info">Info</string>
    <string name="close">Close</string>
    <string name="profile_preferences">Your profile</string>
    <string name="profile_name_pref">Name</string>
    <string name="profile_name_subtitle">Set your name</string>
    <string name="profile_image_pref">Image</string>
    <string name="profile_image_subtitle">Set your image</string>
    <string name="preferences">Preferences</string>
    <string name="unknown">Unknown</string>
    <string name="enable_wifi">Do you want to enable WIFI ?</string>
    <string name="enable_gps">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wifi_settings">Wifi Settings</string>
    <string name="joining">Joining,</string>
    <string name="please_wait">please Wait...</string>
    <string name="please_gps">Please enable your location!</string>
    <string name="cannot_create_group">Cannot create your group</string>
    <string name="join_group">Join group</string>
    <string name="want_join">Do you want to join </string>
    <string name="connection_problems">There are connection problems!</string>
    <string name="no_tcp">Cannot estabilish TCP connection!</string>
    <string name="refused_connection">Group owner refused connection!</string>
    <string name="be_connected">You must be connected to the Internet</string>
    <string name="has_joined">has joined the group!</string>
    <string name="has_leaved">has leaved</string>
    <string name="refreshing">Refreshing...</string>
    <string name="version">Version</string>
    <string name="appInfo">. To obtain the best performace please use all the same wifi access point, or stay disconnected while keeping wifi on.</string>
    <string name="image_preference">image_preference</string>
    <string name="name_preference">name_preference</string>
    <string name="pick_a_color">Pick a color!</string>
    <string name="please_wifi">Please enable your wifi</string>
    <string name="notification_title">WiFindMe</string>
    <string name="notification_content">Connection started!</string>
    <string name="connection_has_been_closed">Connection has been closed in the meantime</string>
</resources>
